--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Steven Hiek</h1>
 
-  <img src="http://lorempixel.com/400/200/" alt="Placeholder image">
+  <img src="Placeholder  Image" alt="Placeholder image">
 
   <p>Write a short paragraph about yourself or some placeholder text.</p>
   <p>A second short paragraph about yourself or some placeholder text.</p>
